--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
     <main>
         <section id="color-palette">
+            <div class="color blackBox"></div>
             <div class="color redBox"></div>
             <div class="color greenBox"></div>
             <div class="color blueBox"></div>
-            <div class="color purpleBox"></div>
         </section>
+
+        <section id="pixel-board"></section>
     </main>
 
 
